<resources>
    <string name="app_name">Weather</string>

    <!-- items -->
    <string name="temperature_rec">%s°</string>
    <string name="min_max_temperature">Макс.:%d°,мин.:%d°</string>
    <string name="tomorrow_info_grow_true">Повышение температуры завтра, макс. температура: %d°.</string>
    <string name="tomorrow_info_grow_false">Понижение температуры завтра, макс. температура: %d°.</string>
    <string name="tomorrow_info_not_changed">Завтра температура не изменится, макс. температура: %d°.</string>
    <string name="item_temp_now">Сейчас</string>
    <string name="temp_text_horizontal_recycler">%s°</string>
    <string name="seven_days_weather_text">прогноз на 7 дней</string>
    <string name="humidity_text">%d%%</string>
    <string name="uvi_text_title">уф-индекс</string>
    <string name="sunrise_text_title">восход солнца</string>
    <string name="wind_text_title">ветер</string>
    <string name="precipitation_text_title">осадки</string>
    <string name="sunset_text">Закат: %s</string>
    <string name="precipitation_last_day">в течении дня</string>
    <string name="precipitation_waiting">%d mm ожидается в течении суток.</string>
    <string name="precipitation_mm">%s мм</string>
    <string name="wind_gust">Порывы ветра: %s</string>
    <string name="wind_gust_value">До %d м/с</string>
    <string name="wind_speed">%d м/с</string>
    <string name="today_text_daily">Сегодня</string>
    <string name="feels_like_title">ощущается как</string>
    <string name="pressure_title">давление</string>
    <string name="pressure_mm">%s мм рт. ст.</string>
    <string name="humidity_title">влажность</string>
    <string name="visibility_title">видимость</string>
    <string name="humidity_text_card_view">%s %%</string>
    <string name="dew_point_text">Точка росы сейчас: %s°</string>
    <string name="visibility_distance">%s км</string>

    <!-- load -->
    <string name="load_text">—.—</string>
    <string name="min_max_temperature_load">Макс.:,мин.:</string>
    <string name="tomorrow_info_grow_load">Ожидаем информацию о погоде завтра…</string>

    <string name="temperature_feels_like" translatable="false">%s°</string>

    <!-- wind directions -->

    <string name="north">Северный</string>
    <string name="north_northeast">Северный, северо-восточный</string>
    <string name="northeast">Северо-восточный</string>
    <string name="east_northeast">Восточный, северо-восточный</string>
    <string name="eastern">Восточный</string>
    <string name="eastern_southeastern">Восточный, юго-восточный</string>
    <string name="southeastern">Юго-восточный</string>
    <string name="south_south_east">Южный, юго-восточный</string>
    <string name="south">Южный</string>
    <string name="south_southwest">Южный, юго-западный</string>
    <string name="southwest">Юго-западный</string>
    <string name="west_southwest">Западный, юго-западный</string>
    <string name="west">Западный</string>
    <string name="western_north_western">Западный, северо-западный</string>
    <string name="northwest">Северо-западный</string>
    <string name="north_north_west">Северный, северо-западный</string>
    <string name="empty_string" />

    <!-- feels description -->

    <string name="feels_cold">По ощущениям холоднее из-за ветра.</string>
    <string name="feels_cooler">По ощущениям прохладнее из-за ветра.</string>
    <string name="feels_hotter">По ощущениям жарче из-за отсутствия ветра.</string>
    <string name="feels_same">По ощущениям примерно так же.</string>

    <!-- uv index -->
    <string name="low">Низкий</string>
    <string name="moderate">Умеренный</string>
    <string name="high">Высокий</string>
    <string name="very_high">Очень высокий</string>
    <string name="excessive">Черезмерный</string>
    <string name="not_determined">Неопределен</string>

    <!-- uv index level -->
    <string name="not_changed_lvl">"Остается %s до конца дня."</string>
    <string name="during_in_day">В течении дня станет: %s.</string>
    <string name="decrease_in_day">К концу дня уменшится до: %s.</string>

    <!-- settings fragment -->
    <string name="query_hint">Введите название города</string>
    <string name="title_settings_text">Погода</string>
    <string name="current_location">Текущее место</string>
    <string name="back">Назад</string>
    <string name="application_support">Поддержать приложение</string>
    <string name="delete_city">Удалить город?</string>
    <string name="delete_city_body">Вы уверены, что хотите удалить город из списка?</string>
    <string name="delete_city_button">Удалить</string>
    <string name="cancel_delete_city_button">Отмена</string>
    <string name="title_app_supporting">Уважаемый пользователь.</string>
    <string name="info_text_app_supporting">На данной странице, вы можете предложить идею по улучшению приложения или пожертвовать средства, которые пойдут на дальнейшее развитие приложения.</string>
    <string name="user_error_info">В том случае, если вы нашли какую-либо ошибку в работе приложения или визуальный баг, прошу вас:\n1) Сделать снимок экрана, с данной ошибкой.\n2) Кратко описать условия, при которых вы ее нашли.\n3) Нажать кнопку сообщить о проблеме и отправить письмо с данным текстом и изображением.</string>
    <string name="user_error_title">Если нашли ошибку в приложении:</string>
    <string name="card_button_error_message">Сообщить о проблеме</string>
</resources>