<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/normal_space" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/normal_space" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/normal_space" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/normal_space" />

        <androidx.cardview.widget.CardView
            android:id="@+id/info_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/top_line">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_space"
                    android:gravity="center"
                    android:text="@string/title_app_supporting"
                    android:textSize="@dimen/card_view_title_text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginEnd="@dimen/normal_space"
                    android:layout_marginBottom="@dimen/normal_space"
                    android:justificationMode="inter_word"
                    android:text="@string/info_text_app_supporting"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/card_view_title_text_size_normal"
                    android:textStyle="italic" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_error_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/info_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_space"
                    android:gravity="center"
                    android:text="@string/user_error_title"
                    android:textSize="@dimen/card_view_title_text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginEnd="@dimen/normal_space"
                    android:layout_marginBottom="@dimen/normal_space"
                    android:justificationMode="inter_word"
                    android:text="@string/user_error_info"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/card_view_title_text_size_normal"
                    android:textStyle="italic" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_button_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/card_error_info">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:gravity="center"
                android:text="@string/card_button_error_message"
                android:textSize="@dimen/card_view_title_text_size_normal" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/card_button_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
