<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <TextView
            android:id="@+id/city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            tools:text="Санкт-Петербург" />

        <TextView
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/city_name"
            tools:text="5°" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/current_temp"
            tools:text="Облачно" />

        <TextView
            android:id="@+id/max_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/description_text_view"
            tools:text="@string/min_max_temperature_load" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_hourly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/max_min_temp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="@string/tomorrow_info_grow_load" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/small_space"
                    android:layout_marginBottom="@dimen/small_space"
                    android:background="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_horizontal_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/card_view_hourly">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/thermostat_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_thermostat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/seven_days_weather_text"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@id/thermostat_image_view" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/small_space"
                    android:layout_marginBottom="@dimen/small_space"
                    android:background="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/index_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            android:layout_marginEnd="@dimen/small_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintEnd_toStartOf="@id/sunset_card_view"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/card_view_daily">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sun" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_space"
                        android:text="@string/uvi_text_title"
                        android:textAllCaps="true"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/uvi_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/uvi_level_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/uvi_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sunset_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintBottom_toBottomOf="@id/index_card_view"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/index_card_view"
            app:layout_constraintTop_toTopOf="@id/index_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sunrise" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_space"
                        android:text="@string/sunrise_text_title"
                        android:textAllCaps="true"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/sunrise_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/sunset_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/wind_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_space"
            android:layout_marginTop="@dimen/big_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintEnd_toStartOf="@id/precipitation_card_view"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/index_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_space"
                        android:text="@string/wind_text_title"
                        android:textAllCaps="true"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/wind_speed_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/wind_direction_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/wind_gust"/>


                <TextView
                    android:id="@+id/wind_gust_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/precipitation_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_space"
            app:cardCornerRadius="@dimen/card_view_rectangle_radius"
            app:cardElevation="@dimen/card_view_rectangle_radius"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/wind_card_view"
            app:layout_constraintTop_toTopOf="@id/wind_card_view"
            app:layout_constraintBottom_toBottomOf="@id/wind_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_space"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_precipitation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_space"
                        android:text="@string/precipitation_text_title"
                        android:textAllCaps="true"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/precipitation_mm_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation_last_day"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/precipitation_mm_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_space"
            app:layout_constraintEnd_toStartOf="@id/end_line"
            app:layout_constraintStart_toEndOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/wind_card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>